--- a/index.html
+++ b/index.html
@@ -35,6 +35,10 @@
                 </div>
             </div>
             <br>
+            <iframe
+            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d57242780.680847235!2d-62.01078259791304!3d28.873910169648028!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x15577f59d102b195%3A0x88b94ee8ddb7ab18!2sBaghdad%20Business%20School%20(BBS)!5e0!3m2!1sen!2siq!4v1687603248248!5m2!1sen!2siq"
+            width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy"
+            referrerpolicy="no-referrer-when-downgrade"></iframe>
         </div>
     </main>
     </main>
