Added Services + Contact Us

--- a/2. Carousal/index.html
+++ b/2. Carousal/index.html
@@ -7,7 +7,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
     <link href="style.css" rel="stylesheet">
-    <title>Document</title>
+    <title>SCT</title>
 </head>
 
 <body>
@@ -45,7 +45,7 @@
                     <div class="carousel-caption d-none d-md-block">
                         <h5 style="color: aliceblue;">First slide label</h5>
                         <p style="color: aliceblue;">Some representative placeholder content for the first slide.</p>
-                        <button type="button" class="btn_"> Learn More !</button>
+                        <a href="#" class="btn_">Read More</a>
                     </div>
                 </div>
                 <div class="carousel-item" data-bs-interval="2000">
@@ -88,7 +88,7 @@
                         a quos
                         saepe dolorum ipsum explicabo. Quasi asperiores mollitia dignissimos. Est nemo vero
                         necessitatibus accusa</p>
-                    <button type="button" class="btn btn-primary"> Learn more .. </button>
+                    <a href="#" class="btn_">Read More</a>
                 </div>
             </div>
         </section>
@@ -149,29 +149,24 @@
             <div class="row col-md-10 d-flex justify-content-center" id="contact">
                 <h4>Contact Us</h4>
                 <p style="text-align: center;">Lorem ipsum dolor sit amett</p>
-                <p style="text-align: center; line-height: 0; padding-bottom: 60px;">, consectetur adipisicing elit. Sequi fuga debitis nesciunt minus assumenda odit </p>
-        
-        <div class=" in col-md-6 ">
-            <input type=" text" id="user_name" name="user_name" placeholder="Full Name" class="btnl">
+                <p style="text-align: center; line-height: 0; padding-bottom: 60px;">, consectetur adipisicing elit.
+                    Sequi fuga debitis nesciunt minus assumenda odit </p>
+
+                <div class=" in col-md-6 ">
+                    <label for="user_name"> Full Name :</label>
+                    <input type=" text" id="user_name" name="user_name" placeholder="Full Name" class="btnl">
                     <br>
+                    <label for="user_email"> E-mail :</label>
                     <input type="email" id="user_email" name="user_email" placeholder="Email" class="btnl">
                     <br>
+                    <label> Your Message :</label>
                     <textarea name="message" placeholder="Message" class="btnl"></textarea> <br>
                     <button type="submit" class="btn_"> Send Message </button>
+                </div>
             </div>
-
-            </div>
-            </div>
-
-
-
-
         </section>
-
-
     </main>
-
-    <footer> ® She Codes Too</footer>
+    <footer> ® She Codes Too </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
         crossorigin="anonymous"></script>
